--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines":{
-     "node":"11.3",
+     "node":"v6.11.3",
      "npm":"5.4.2"
   },
   "scripts": {
