--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
-     "node":"v6.11.3",
-     "npm":"5.4.2"
+  "engines": {
+    "node": "v6.11.3",
+    "npm": "5.4.2"
   },
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "prettier": "^1.7.4"
   }
 }
